add foreground service and change notification permission handling

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -24,6 +25,8 @@
             </intent-filter>
         </activity>
         <service android:name=".MyService" />
+        <service android:name=".MyForegroundService"
+            android:foregroundServiceType="shortService"/>
     </application>
 
 </manifest>
